<resources>
    <string name="app_name">Toll booking System</string>
    <string name="button">Log in</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user_register_here">*New user Register here</string>
    <string name="amount_to_pay">Amount to Pay Rs.</string>
    <string name="you_need_to_buy">You need to Buy</string>
    <string name="already_purchased_click_here">Already Purchased click here</string>
    <string name="forgot_password">**Forgot Password</string>
    <string name="new_user_register_here1">New User Register Here!!</string>

    <string-array name="numbers">
        <item>Select Source Location</item>
        <item>Mumbai</item>
        <item>Panvel</item>
        <item>Thane</item>
        <item>Pune</item>
        <item>Ratnagiri</item>
    </string-array>

    <string-array name="numbers2">
        <item>Select Destination location</item>
        <item>Mumbai</item>
        <item>Panvel</item>
        <item>Thane</item>
        <item>Pune</item>
        <item>Ratnagiri</item>
    </string-array>
</resources>