<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rega"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B0FF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="119dp"
            android:layout_height="107dp"
            android:layout_gravity="center"
            android:layout_margin="35pt"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <EditText
            android:id="@+id/semail"
            android:layout_width="265dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Email Address"
            android:inputType="textPersonName"
            android:padding="5pt"
            android:textColor="#272727"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/rpassword"
            android:layout_width="265dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5pt"
            android:textColor="#333333"
            android:textColorHint="#8F8F8F" />

        <Button
            android:id="@+id/signIn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:layout_margin="5pt"
            android:background="#22705C"
            android:backgroundTint="#A6EFDD"
            android:backgroundTintMode="screen"
            android:text="@string/button"
            android:textColor="#979797"
            app:iconTint="#FFFFFF" />

        <TextView
            android:id="@+id/regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:gravity="center"
            android:text="@string/new_user_register_here1" />

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:gravity="center"
            android:text="@string/forgot_password" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>