<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#70DDD4"
    tools:context=".dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="10pt"
            android:background="#009688"
            android:dropDownWidth="match_parent"
            android:dropDownSelector="@android:drawable/arrow_down_float"
            android:textColor="#D6D6D6"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"

            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="10pt"
            android:background="#009688"
            android:dropDownWidth="match_parent"
            android:dropDownSelector="@android:drawable/arrow_down_float"
            android:textColor="#D6D6D6" />

        <ImageButton
            android:id="@+id/CalTok"
            android:layout_width="157dp"
            android:layout_height="154dp"
            android:layout_gravity="center"

            android:layout_marginStart="112dp"
            android:layout_marginTop="10pt"
            android:layout_marginEnd="113dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/tbutton" />

        <TableLayout
            android:layout_width="343dp"
            android:layout_height="166dp"
            android:layout_gravity="center"
            android:layout_marginTop="10pt"
            android:background="#BFEDE2"
            android:padding="15sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5pt">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/you_need_to_buy"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tokens"

                    android:layout_width="157dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="#F6F6F6"
                    android:padding="7sp"
                    android:textColor="#0B0B0B"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10pt">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/amount_to_pay"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="157dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="#FAFAFA"
                    android:padding="7sp"
                    android:textColor="#040404"
                    android:textSize="18sp" />


            </TableRow>


        </TableLayout>

        <ImageButton
            android:id="@+id/rpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0pt"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/buygpay" />

        <Button
            android:id="@+id/purchased"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFFFFF"
            android:text="@string/already_purchased_click_here"
            android:textAllCaps="false"
            android:textColor="#3F51B5"
            android:textSize="24sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50pt"
            android:layout_marginTop="5pt"
            android:layout_marginRight="50pt"
            android:background="#F3ECEC"
            android:text="Logout"
            android:textColor="#F34343" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>